--- a/Amoba_beadando.cbp
+++ b/Amoba_beadando.cbp
@@ -44,7 +44,12 @@
 		<Unit filename="checkbox.hpp" />
 		<Unit filename="gm.cpp" />
 		<Unit filename="gm.hpp" />
+		<Unit filename="jatekmester" />
+		<Unit filename="jatekmester.cpp" />
+		<Unit filename="jatekmester.hpp" />
 		<Unit filename="main.cpp" />
+		<Unit filename="statictext.cpp" />
+		<Unit filename="statictext.hpp" />
 		<Unit filename="tools.cpp" />
 		<Unit filename="tools.hpp" />
 		<Unit filename="widget.cpp" />
